# llm-prompt-optimizer

./: .env.example  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp_wrapper.py  pyproject.toml
benchmarks/: run_benchmarks.py
docs/: index.md
examples/claude_mcp/: example.py
examples/langchain/: example.py
examples/local_agents/: custom_plugin_example.py
llm_prompt_optimizer/: __init__.py  cli.py
llm_prompt_optimizer/adapters/anthropic/: __init__.py  adapter.py
llm_prompt_optimizer/adapters/azure_openai/: __init__.py
llm_prompt_optimizer/adapters/code_review_graph/: __init__.py
llm_prompt_optimizer/adapters/graphify/: __init__.py  adapter.py
llm_prompt_optimizer/adapters/local_llm/: __init__.py
llm_prompt_optimizer/adapters/mcp/: __init__.py
llm_prompt_optimizer/adapters/ollama/: __init__.py  adapter.py
llm_prompt_optimizer/adapters/openai/: __init__.py  adapter.py
llm_prompt_optimizer/adapters/openrouter/: __init__.py
llm_prompt_optimizer/api/: __init__.py  app.py
llm_prompt_optimizer/config/: __init__.py  settings.py
llm_prompt_optimizer/core/adaptive_context_expansion/: __init__.py  expansion.py
llm_prompt_optimizer/core/benchmarking/: __init__.py  engine.py
llm_prompt_optimizer/core/classifier/: __init__.py  classifier.py
llm_prompt_optimizer/core/compression/: __init__.py
llm_prompt_optimizer/core/dependency_resolution/: __init__.py  resolver.py
llm_prompt_optimizer/core/drift_detection/: __init__.py  detector.py
llm_prompt_optimizer/core/fallback_graph/: __init__.py  engine.py
llm_prompt_optimizer/core/intent_guard/: __init__.py  guard.py
llm_prompt_optimizer/core/optimizer/: __init__.py  compiler.py  optimizer.py
llm_prompt_optimizer/core/policy/: __init__.py  engine.py
llm_prompt_optimizer/core/precise_context/: __init__.py  resolver.py
llm_prompt_optimizer/core/routing/: __init__.py
llm_prompt_optimizer/core/semantic_validator/: __init__.py  validator.py
llm_prompt_optimizer/core/taxonomy/: __init__.py
llm_prompt_optimizer/installer/: __init__.py  host_rules.py  manifest.py
llm_prompt_optimizer/mcp_server/: __init__.py  server.py
llm_prompt_optimizer/models/: __init__.py  classification.py  context.py  intent.py  prompt.py  telemetry.py  validation.py
llm_prompt_optimizer/plugins/: __init__.py  system.py
llm_prompt_optimizer/sdk/: __init__.py  optimizer.py
llm_prompt_optimizer/utils/: __init__.py  helpers.py
tests/: conftest.py
tests/api/: test_api.py
tests/core/: test_classifier.py  test_drift_detector.py  test_intent_guard.py  test_plugin_system.py  test_semantic_validator.py  test_token_budget.py
tests/integration/: test_mcp_server.py  test_pipeline.py
(+8 files in other folders)
