[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-prompt-optimizer"
version = "0.1.0"
description = "A universal, deterministic prompt optimization middleware for AI coding agents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "LLM Prompt Optimizer Contributors" }
]
keywords = [
    "llm", "prompt", "optimization", "mcp", "ai", "agents",
    "claude", "cursor", "copilot", "middleware", "context",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "starlette>=0.49.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=3.3.4",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
]
anthropic = ["anthropic>=0.28.0"]
openai = ["openai>=1.30.0"]
ollama = []  # uses stdlib urllib
websocket = ["websockets>=12.0"]
telemetry = [
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "prometheus-client>=0.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
all = [
    "llm-prompt-optimizer[ml,anthropic,openai,websocket,telemetry,dev]"
]

[project.scripts]
llm-prompt-optimizer = "llm_prompt_optimizer.cli:main"
lpo = "llm_prompt_optimizer.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/llm-prompt-optimizer"
Documentation = "https://github.com/your-org/llm-prompt-optimizer/blob/main/README.md"
Repository = "https://github.com/your-org/llm-prompt-optimizer"
Issues = "https://github.com/your-org/llm-prompt-optimizer/issues"

[tool.hatch.build.targets.wheel]
packages = ["llm_prompt_optimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=llm_prompt_optimizer --cov-report=term-missing -v"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["llm_prompt_optimizer"]
omit = ["*/tests/*", "*/__pycache__/*"]
